# PKU-Lecture-Notes

./: .gitignore  LICENSE  README.md
Advanced Algebra/I/: 24-09.md  24-10.md  24-11-1.md  24-11-2.md  24-12.md  final.md
Advanced Algebra/II/: 25-02.md  25-03.md  25-04.md  25-05.md  final.md
Algebraic Structures and Combinatorial Mathematics/: 26-03.md
Algebraic Structures and Combinatorial Mathematics/homework/: 26-03-hw1.md  26-03-hw2.md  26-03-hw3.md  26-04-hw4.md  26-04-hw5.md
Algorithm Design and Analysis/homework/: 26-03-hw1.md  26-03-hw2.md  26-03-hw3.md  26-04-hw4.md
Data Structures and Algorithms/homework/: 25-09-hw1.md  (+11 more)
Discrete Mathematics and Structures/: 25-09.md  25-10.md  25-11.md  25-12.md  final.md
Intro to Computer Systems/: review.md
Intro to Information Science and Technology/: 24-09-1 (Tong Yang).md  24-09-2 (Peijie Zhou).md  24-10-3 (Siwei Ma).md  24-10-4 (Han Wang).md  24-10-5 (Desheng Zhang).md  24-11-6-1 (Wentao Zhang).md  24-11-6-2 (Xiao Yuan).md  24-11-7-1 (Hao Dong).md  24-11-7-2 (Yuqing Kong).md  24-11-8 (Boxin Shi).md  24-11-9 (Yuxin Peng).md  24-12-10 (Baoquan Chen).md  24-12-11 (Bin Dong).md  25-01-report.md  课程概述.pptx
Intro to Theory of Computation/: 26-03.md  26-04.md
Mathematical Foundations for the Information Age/: 25-09.md  25-10.md  25-11.md  25-12.md  final.md
Music and Mathematics/: note.md
Physics in Information Science/: 24-09-sup.md  24-09.md  24-10-sup.md  24-10.md  24-11.md  24-12.md  final.md
Programming in Artificial Intelligence/labs/aiphw4/: CMakeLists.txt  readme.md
Programming in Artificial Intelligence/labs/aiphw4/src/: cudabase.cu  cudabase.cuh  functional.cu  functional.h  pybind.cpp  tensor.cu  tensor.h
Programming in Artificial Intelligence/labs/aiphw7/Task3/: CMakeLists.txt  cifar10.py  cifar10_torch.py  nnmodel.py  parity_check.py  report.md  tiny_imagenet.py  tiny_imagenet_torch.py
Programming in Artificial Intelligence/labs/aiphw7/Task3/log/: stat.py
Programming in Artificial Intelligence/labs/aiphw7/Task3/src/: cudabase.cu  cudabase.cuh  functional.cu  functional.h  operator.cpp  operator.h  pybind.cpp  tensor.cu  tensor.h
(+399 files in other folders)
